--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,6 +7,7 @@
     name: "docker"
     state: "started"
     enabled: yes
+    daemon_reload: true
 
 - name: "Restart Docker"
   register: docker_service_status
