--- a/tests/inventory/group_vars/local.yml
+++ b/tests/inventory/group_vars/local.yml
@@ -5,12 +5,12 @@ inv_install_docker_compose_version: "2.17.2"
 #  - http://your.personnal.registrie:5049
 #  - http://your.personnal.registrie:5050
 
-inv_install_docker_portainer: true
+inv_install_docker_portainer: false
 inv_install_docker_portainer_http_port: 9000
 inv_install_docker_portainer_https_port: 9443
 inv_install_docker_portainer_agent_port: 8000
 inv_install_docker_portainer_container_name: "portainer-ce"
 inv_install_docker_portainer_volume_name: "portainer_data"
 
-inv_install_docker_watchtower: true
+inv_install_docker_watchtower: false
 inv_install_docker_watchtower_container_name: "watchtower"
