--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -44,8 +44,8 @@
           dest: "/etc/docker/daemon.json"
           mode: "0600"
 
-- name: "Install Portainer"
-  when: install_docker_portainer | default(false)
+- name: "Install Portainer (no SSL)"
+  when: (install_docker_portainer | default(false)) and not (install_docker_portainer_ssl | default(false))
   community.docker.docker_container:
     name: "{{ install_docker_portainer_container_name }}"
     image: "portainer/portainer-ce"
@@ -59,6 +59,26 @@
       - "{{ install_docker_portainer_volume_name }}:/data"
     devices:
       - "/var/run/docker.sock:/var/run/docker.sock"
+
+- name: "Install Portainer (SSL)"
+  when: (install_docker_portainer | default(false)) and (install_docker_portainer_ssl | default(false))
+  community.docker.docker_container:
+    name: "{{ install_docker_portainer_container_name }}"
+    image: "portainer/portainer-ce"
+    state: "present"
+    recreate: false
+    exposed_ports:
+      - "{{ install_docker_portainer_agent_port }}:9443"
+      - "{{ install_docker_portainer_http_port }}:9443"
+      - "{{ install_docker_portainer_https_port }}:9443"
+    volumes:
+      - "{{ install_docker_portainer_volume_name }}:/data"
+    devices:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "{{ inv_install_docker_portainer_ssl_path }}:/certs"
+    env:
+      sslcert: "{{ install_docker_portainer_ssl_cert }}"
+      sslkey: "{{ install_docker_portainer_ssl_key }}"
 
 - name: "Install Watchtower"
   when: install_docker_watchtower | default(false)
