--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,10 @@ install_docker_portainer_https_port: 9443
 install_docker_portainer_agent_port: 8000
 install_docker_portainer_container_name: "portainer-ce"
 install_docker_portainer_volume_name: "portainer_data"
+install_docker_portainer_ssl: true
+install_docker_portainer_ssl_path: "/etc/certs"
+install_docker_portainer_ssl_cert: "{{ install_docker_portainer_ssl_path }}/mycert.crt"
+install_docker_portainer_ssl_key: "{{ install_docker_portainer_ssl_path }}/mykey.key"
 
 install_docker_watchtower: true
 install_docker_watchtower_container_name: "watchtower"
