--- a/tests/inventory/group_vars/local.yml
+++ b/tests/inventory/group_vars/local.yml
@@ -6,11 +6,15 @@ inv_install_docker_compose_version: "2.17.2"
 #  - http://your.personnal.registrie:5050
 
 inv_install_docker_portainer: true
-inv_install_docker_portainer_http_port: 9000
-inv_install_docker_portainer_https_port: 9443
-inv_install_docker_portainer_agent_port: 8000
+inv_install_docker_portainer_http_port: 9001
+inv_install_docker_portainer_https_port: 9444
+inv_install_docker_portainer_agent_port: 8001
 inv_install_docker_portainer_container_name: "portainer-ce"
 inv_install_docker_portainer_volume_name: "portainer_data"
+inv_install_docker_portainer_ssl: true
+inv_install_docker_portainer_ssl_path: "/etc/docker/ssl/portainer"
+inv_install_docker_portainer_ssl_cert: "{{ inv_install_docker_portainer_ssl_path }}/my-portainer.domain.tld/my-portainer.domain.tld.pem.crt"
+inv_install_docker_portainer_ssl_key: "{{ inv_install_docker_portainer_ssl_path }}/my-portainer.domain.tld/my-portainer.domain.tld.pem.key"
 
 inv_install_docker_watchtower: true
 inv_install_docker_watchtower_container_name: "watchtower"
