--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -51,6 +51,7 @@
     image: "portainer/portainer-ce"
     state: "present"
     recreate: false
+    restart_policy: "always"
     exposed_ports:
       - "{{ install_docker_portainer_agent_port }}:9443"
       - "{{ install_docker_portainer_http_port }}:9443"
@@ -67,6 +68,7 @@
     image: "portainer/portainer-ce"
     state: "present"
     recreate: false
+    restart_policy: "always"
     exposed_ports:
       - "{{ install_docker_portainer_agent_port }}:9443"
       - "{{ install_docker_portainer_http_port }}:9443"
@@ -87,5 +89,12 @@
     image: "containrrr/watchtower"
     state: "present"
     recreate: false
+    restart_policy: "always"
     devices:
       - "/var/run/docker.sock:/var/run/docker.sock"
+    env:
+      WATCHTOWER_POLL_INTERVAL: "{{ install_docker_watchtower_poll_interval }}"
+      WATCHTOWER_CLEANUP: "{{ install_docker_watchtower_cleanup }}"
+      WATCHTOWER_INCLUDE_RESTARTING: "{{ install_docker_watchtower_include_restarting }}"
+      WATCHTOWER_INCLUDE_STOPPED: "{{ install_docker_watchtower_include_stopped }}"
+      WATCHTOWER_NO_RESTART: "{{ install_docker_watchtower_no_restart }}"
