--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,7 @@ install_docker_portainer: true
 install_docker_portainer_http_port: 9000
 install_docker_portainer_https_port: 9443
 install_docker_portainer_agent_port: 8000
+install_docker_portainer_address: "0.0.0.0"
 install_docker_portainer_container_name: "portainer-ce"
 install_docker_portainer_volume_name: "portainer_data"
 install_docker_portainer_ssl: true
