--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -28,5 +28,6 @@
         install_docker_watchtower_include_restarting: "{{ inv_install_docker_watchtower_include_restarting }}"
         install_docker_watchtower_include_stopped: "{{ inv_install_docker_watchtower_include_stopped }}"
         install_docker_watchtower_no_restart: "{{ inv_install_docker_watchtower_no_restart }}"
+        install_docker_portainer_address: "{{ inv_install_docker_portainer_address }}"
       ansible.builtin.include_role:
         name: "labocbz.install_docker"
