--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,16 +66,15 @@
   community.docker.docker_container:
     name: "{{ install_docker_portainer_container_name }}"
     image: "portainer/portainer-ce"
-    state: "present"
+    state: "started"
     recreate: false
     restart_policy: "always"
-    exposed_ports:
-      - "{{ install_docker_portainer_agent_port }}:9443"
-      - "{{ install_docker_portainer_http_port }}:9443"
-      - "{{ install_docker_portainer_https_port }}:9443"
+    ports:
+      - "{{ install_docker_portainer_address }}:{{ install_docker_portainer_http_port }}:9000"
+      - "{{ install_docker_portainer_address }}:{{ install_docker_portainer_https_port }}:9443"
+      - "{{ install_docker_portainer_address }}:{{ install_docker_portainer_agent_port }}:8000"
     volumes:
       - "{{ install_docker_portainer_volume_name }}:/data"
-    devices:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "{{ inv_install_docker_portainer_ssl_path }}:/certs"
     env:
@@ -87,10 +86,10 @@
   community.docker.docker_container:
     name: "{{ install_docker_watchtower_container_name }}"
     image: "containrrr/watchtower"
-    state: "present"
+    state: "started"
     recreate: false
     restart_policy: "always"
-    devices:
+    volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     env:
       WATCHTOWER_POLL_INTERVAL: "{{ install_docker_watchtower_poll_interval }}"
