--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
 
   - name: "Update apt and install docker-ce"
     ansible.builtin.apt:
-      update_cache: false
+      update_cache: true
       name:
         - "docker-ce"
 
