--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,3 +24,10 @@ install_docker_watchtower_cleanup: true
 install_docker_watchtower_include_restarting: true
 install_docker_watchtower_include_stopped: true
 install_docker_watchtower_no_restart: true
+
+install_docker_handle_clean: true
+
+install_docker_clean_cron_file: "ansible_docker_system_prune"
+install_docker_clean_weekday: "*"
+install_docker_clean_minute: "*"
+install_docker_clean_hour: "*/8"
