--- a/tests/inventory/group_vars/local.yml
+++ b/tests/inventory/group_vars/local.yml
@@ -24,3 +24,9 @@ inv_install_docker_watchtower_cleanup: true
 inv_install_docker_watchtower_include_restarting: true
 inv_install_docker_watchtower_include_stopped: true
 inv_install_docker_watchtower_no_restart: true
+
+inv_install_docker_handle_clean: true
+inv_install_docker_clean_cron_file: "ansible_docker_system_prune"
+inv_install_docker_clean_weekday: "*"
+inv_install_docker_clean_minute: "*"
+inv_install_docker_clean_hour: "*/8"
