--- a/molecule/cicd-debian-11/converge.yml
+++ b/molecule/cicd-debian-11/converge.yml
@@ -34,5 +34,6 @@
         install_docker_clean_weekday: "{{ inv_install_docker_clean_weekday }}"
         install_docker_clean_minute: "{{ inv_install_docker_clean_minute }}"
         install_docker_clean_hour: "{{ inv_install_docker_clean_hour }}"
+        install_docker_disable_swap: "{{ inv_install_docker_disable_swap }}"
       ansible.builtin.include_role:
         name: "labocbz.install_docker"
