--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 install_docker_compose_version: "2.17.2"
 
-install_docker_disable_swap: false
+install_docker_disable_swap: true
 
 #install_docker_insecure_registries:
 #  - http://your.personnal.registrie:5049
