--- a/molecule/cicd-docker-dind/molecule.yml
+++ b/molecule/cicd-docker-dind/molecule.yml
@@ -8,25 +8,28 @@ driver:
   name: "docker"
 
 platforms:
-  - name: "molecule-local-instance-1-install-docker"
-    image: "${NEXUS_ADDRESS}/${DOCKER_IMAGE_DEBIAN_11_ANSIBLE}"
-    command: "/sbin/init"
+  - name: "molecule-cicd-docker-dind-instance-1-install-docker"
+    #image: "robincbz/debian-12-ansible:latest"
+    image: "robincbz/docker-dind-ansible:latest"
+    hostname: "molecule-cicd-docker-dind-instance-1-install-docker"
     #published_ports:
-    #  - "0.0.0.0:8181:8181/tcp"
-    dockerfile: "Dockerfile"
+    #  - "0.0.0.0:9001:9002/tcp"
+    #  - "0.0.0.0:8001:8002/tcp"
+    #  - "0.0.0.0:9444:9445/tcp"
     privileged: true
     pre_build_image: true
-    override_command: true
+    command: "/sbin/init"
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+      - "/var/run/docker.sock:/var/run/docker.sock:rw"
     tmpfs:
       - "/run"
       - "/tmp"
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-      - "/var/lib/containerd:/var/lib/containerd"
     cgroupns_mode: "host"
     cgroup_manager: "cgroupfs"
-    #storage_opt: "overlay.mount_program=/usr/bin/fuse-overlayfs"
-    #storage_driver: "overlay"
+    storage_driver: "overlay2"
+    networks:
+      - name: "molecule-default-install-docker"
 
 provisioner:
   name: "ansible"
@@ -36,7 +39,7 @@ provisioner:
       group_vars: "../../tests/inventory/group_vars/"
       host_vars: "../../tests/inventory/host_vars/"
   options:
-    extra-vars: "@./../../tests/tower/tower.yml"
+    extra-vars: "@./tests/tower/tower.yml"
   log: ${MOLECULE_ANSIBLE_LOG:-true}
   env:
     ANSIBLE_CONFIG: "../../.ansible.cfg"
@@ -54,7 +57,7 @@ verifier:
   name: "ansible"
 
 scenario:
-  name: "cicd-debian-11"
+  name: "default"
   test_sequence:
     - "destroy"
     - "syntax"
