--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -4,3 +4,15 @@ all:
     local:
       hosts:
         molecule-local-instance-1-install-docker:
+    cicd-debian-12:
+      hosts:
+        molecule-cicd-debian-12-instance-1-install-docker:
+    cicd-debian-11:
+      hosts:
+        molecule-cicd-debian-11-instance-1-install-docker:
+    cicd-ubuntu-22:
+      hosts:
+        molecule-cicd-ubuntu-22-instance-1-install-docker:
+    cicd-ubuntu-22:
+      hosts:
+        molecule-cicd-docker-dind-instance-1-install-docker:
