--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -13,6 +13,6 @@ all:
     cicd-ubuntu-22:
       hosts:
         molecule-cicd-ubuntu-22-instance-1-install-docker:
-    cicd-ubuntu-22:
+    cicd-docker-dind:
       hosts:
         molecule-cicd-docker-dind-instance-1-install-docker:
