fix CI docker dind 2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -173,7 +173,7 @@ publish_release_candidate:
     - "git add ."
     - "git push r_origin \"$RC_BRANCH_NAME\""
   needs:
-    - "molecule_test_debian_12"
+    - "molecule_test_docker_dind"
     - "sonarqube-check"
   rules:
     - if: '$CI_COMMIT_MESSAGE=~/^[^Merge]/ && $CI_COMMIT_BRANCH == "develop"'
