--- a/molecule/cicd-docker-dind/molecule.yml
+++ b/molecule/cicd-docker-dind/molecule.yml
@@ -9,8 +9,7 @@ driver:
 
 platforms:
   - name: "molecule-cicd-docker-dind-instance-1-install-docker"
-    #image: "robincbz/debian-12-ansible:latest"
-    image: "robincbz/docker-dind-ansible:latest"
+    image: "${NEXUS_REPOS_DOCKER_REGISTRY}/${DOCKER_IMAGE_DOCKER_DIND_ANSIBLE}"
     hostname: "molecule-cicd-docker-dind-instance-1-install-docker"
     #published_ports:
     #  - "0.0.0.0:9001:9002/tcp"
