--- a/molecule/cicd-docker-dind/converge.yml
+++ b/molecule/cicd-docker-dind/converge.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Converge"
-  hosts: "docker-dind"
+  hosts: "cicd-docker-dind"
   tasks:
 
     - name: "Include labocbz.install_docker"
