--- a/molecule/cicd-docker-dind/verify.yml
+++ b/molecule/cicd-docker-dind/verify.yml
@@ -2,7 +2,7 @@
 # Don't forget to keep this file updated
 # molecule/<scenario>/verify.yml
 - name: "Verify"
-  hosts: "docker-dind"
+  hosts: "cicd-docker-dind"
   gather_facts: false
   tasks:
 
