--- a/molecule/cicd-docker-dind/molecule.yml
+++ b/molecule/cicd-docker-dind/molecule.yml
@@ -52,7 +52,7 @@ verifier:
   name: "ansible"
 
 scenario:
-  name: "default"
+  name: "cicd-docker-dind"
   test_sequence:
     - "destroy"
     - "syntax"
