--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,10 +12,10 @@ platforms:
     #image: "robincbz/debian-12-ansible:latest"
     image: "robincbz/docker-dind-ansible:latest"
     hostname: "molecule-local-instance-1-install-docker"
-    published_ports:
-      - "0.0.0.0:9000:9000/tcp"
-      - "0.0.0.0:8000:8000/tcp"
-      - "0.0.0.0:9443:9443/tcp"
+    #published_ports:
+    #  - "0.0.0.0:9000:9000/tcp"
+    #  - "0.0.0.0:8000:8000/tcp"
+    #  - "0.0.0.0:9443:9443/tcp"
     privileged: true
     pre_build_image: true
     command: "/sbin/init"
