--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -49,5 +49,6 @@
       register: result
       failed_when: result.status != 200
       ansible.builtin.uri:
+        validate_certs: no
         url: "https://127.0.0.1:{{ inv_install_docker__portainer_https_port }}/"
         method: "GET"
