--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,7 +9,7 @@ driver:
 
 platforms:
   - name: "molecule-local-instance-1-install-docker"
-    #image: "robincbz/debian-12-ansible:latest"
+    #image: "labocbz/ansibletest-debian-12:latest"
     image: "robincbz/docker-dind-ansible:latest"
     hostname: "molecule-local-instance-1-install-docker"
     #published_ports:
@@ -39,7 +39,7 @@ provisioner:
       host_vars: "../../tests/inventory/host_vars/"
   options:
     extra-vars: "@./tests/tower/tower.yml"
-  log: ${MOLECULE_ANSIBLE_LOG:-true}
+  log: true
   env:
     ANSIBLE_CONFIG: "../../.ansible.cfg"
     ANSIBLE_FORCE_COLOR: "True"
